# material_tests_app

./: .gitignore  EJECUTABLE_README.md  MaterialTestingAnalyzer.spec  MaterialTestingAnalyzer_custom.spec  README.md  flexion.xlsx  impacto.xlsx  pyproject.toml  requirements.txt  run_app.py  tension.xlsx
.github/workflows/: build.yml
src/app/: main.py
src/app/analysis/: flexion_analysis.py  impact_analysis.py  tension_analysis.py
src/app/parsers/: flexion_parser.py  impact_parser.py  tension_parser.py
src/app/ui/: flexion_widget.py  home_screen.py  impact_widget.py  main_window.py  plotly_exports.py  styles.py  tension_widget.py
